--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -23,3 +23,7 @@ close=Close
 cancel=Cancel
 url=URL
 save=Save
+player.ffmpeg.info=FFmpeg Media Player is used. Some stations might not play. Please switch to VLC player
+player.nowStreaming=Now streaming
+player.streamingStopped=Streaming stopped
+search.on.youtube=Search on YouTube
