--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -27,3 +27,6 @@ player.ffmpeg.info=FFmpeg Media Player is used. Some stations might not play. Pl
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 search.on.youtube=Search on YouTube
+vcs.download=Download new version
+vcs.close.app=Close app
+vcs.close=Close
