refactoring, reverting some previous changes, make the code more pretty

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -23,11 +23,14 @@ close=Close
 cancel=Cancel
 url=URL
 save=Save
-player.ffmpeg.info=FFmpeg Media Player is used. Some stations might not play. Please switch to VLC player
+player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
+player.vlc.error=VLC Player can't be initialized. Library is not installed on the system.
+player.streamError=Error opening stream. See app.log for details.
 search.on.youtube=Search on YouTube
 vcs.download=Download new version
 vcs.close.app=Close app
 vcs.close=Close
+vcs.uptodate=You are running the latest version of app.
 library.loading=
