--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,18 +1,3 @@
-#
-#  Copyright 2020 FXRadio by hudacek.online
-#
-#    Licensed under the Apache License, Version 2.0 (the "License");
-#    you may not use this file except in compliance with the License.
-#    You may obtain a copy of the License at
-#
-#        http://www.apache.org/licenses/LICENSE-2.0
-#
-#    Unless required by applicable law or agreed to in writing, software
-#    distributed under the License is distributed on an "AS IS" BASIS,
-#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#    See the License for the specific language governing permissions and
-#    limitations under the License.
-#
 appName=FXRadio
 favourites=Favourites
 history=History
@@ -34,3 +19,30 @@ vcs.close.app=Close app
 vcs.close=Close
 vcs.uptodate=You are running the latest version of app.
 library.loading=
+menu.station.add=Add new station
+menu.station.favourite=Add to favourites
+menu.station.favourite.added=Station added to favourites!
+menu.station.favourite.addedAlready=Station is already in your favourites!
+menu.station.favourite.error=There was an error when adding a favourite station. Try again.
+menu.station.favourite.remove=Remove from favourites
+menu.station.favourite.remove.error=There was an error removing favourite.
+menu.station.favourite.removed=Station was removed from favourites
+menu.station.vote=Vote
+menu.station=_Station
+menu.station.info=Get info
+menu.help=_Help
+menu.help.clearCache=Clear image cache
+menu.help.stats=Show API statistics
+menu.help.openhomepage=Visit app website
+menu.help.logs=Open Logs Folder
+cache.clear.confirm=Are you sure?
+cache.clear.ok=Cache cleared successfully.
+cache.clear.error=There was an error when clearing cache.
+cache.clear.text=This action will clear all stored images of radio stations. This cannot be undone
+menu.help.loglevel=Change Log Level
+menu.help.loglevel.off=Off
+menu.help.loglevel.info=Info
+menu.help.loglevel.debug=Debug
+menu.help.clearDatabase=Remove all Favourites
+menu.help.vcs.check = Check for updates
+menu.history=History
