--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -8,6 +8,13 @@ close=Close
 cancel=Cancel
 url=URL
 save=Save
+search=Search for a station...
+countries=Countries
+library=Library
+downloadError=List of countries cannot be downloaded right now.
+downloadRetry=Download error. Retry?
+station=station
+stations=stations
 player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
@@ -44,5 +51,31 @@ menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
 menu.help.clearDatabase=Remove all Favourites
-menu.help.vcs.check = Check for updates
+menu.help.vcs.check=Check for updates
 menu.history=History
+menu.app.quit=Quit
+menu.app.about=About
+menu.app.attributions=Attributions
+menu.app.server=Change API server
+menu.player.controls=Player
+menu.player.stop=Stop
+menu.player.start=Play
+menu.player.switch=Use Custom Media Player (FFmpeg)
+menu.player.animate=Show animated radio name
+menu.player.notifications=Show OS notifications
+vote.ok=Your vote has been successfully added!
+vote.error=Can't vote right now. You should try again soon!
+macos.menu.window=Window
+favourites.clean=Clean favourites
+database.clear.confirm=Are you sure?
+database.clear.text=This operation will remove all your saved favourite stations and cannot be reverted.
+database.clear.ok=Favourites have been cleaned!
+database.clear.error=There was an error cleaning database!
+searchResultsFor=Search results for
+connectionError=Connection error. Please try again
+connectionErrorDesc=Please check if your internet connection is working.
+noResultsDesc=Try refining the search query
+noResults=No stations found
+noResultsFor=No stations found for
+searchingLibrary=Searching the library
+searchingLibraryDesc=Enter at least 3 characters to start searching
