--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -24,6 +24,7 @@ search.on.youtube=Search on YouTube
 vcs.download=Download new version
 vcs.close.app=Close app
 vcs.close=Close
+vcs.required=There is a new required update.
 vcs.uptodate=You are running the latest version of app.
 library.loading=
 menu.station.add=Add new station
