--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -80,3 +80,12 @@ noResults=No stations found
 noResultsFor=No stations found for
 searchingLibrary=Searching the library
 searchingLibraryDesc=Enter at least 3 characters to start searching
+statsUnavailable=Stats are not available at the moment.
+stats.status=Status
+stats.apiVersion=API Version
+stats.supportedVersion=Supported version
+stats.stations=Stations
+stats.countries=Countries
+stats.brokenStations=Broken stations
+stats.tags=Tags
+title=API Statistics
