--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -88,4 +88,4 @@ stats.stations=Stations
 stats.countries=Countries
 stats.brokenStations=Broken stations
 stats.tags=Tags
-title=API Statistics
+stats.title=API Statistics
