fixes for layout, speed up loading of app

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -9,6 +9,7 @@ cancel=Cancel
 url=URL
 save=Save
 search=Search for a station...
+search.max.length=The field is too long
 countries=Countries
 library=Library
 downloadError=List of countries cannot be downloaded right now.
@@ -76,7 +77,7 @@ searchResultsFor=Search results for
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
-noResults=No stations found
+noResults=This library is empty
 noResultsFor=No stations found for
 searchingLibrary=Searching the library
 searchingLibraryDesc=Enter at least 3 characters to start searching
