work on AddStationFragment.kt, rework of history menu, add Copy Stream URL

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -4,12 +4,17 @@ history=History
 topStations=Top Stations
 copy=Copy
 copy.image.url=Copy Image URL
+copy.stream.url=Copy Stream URL
 close=Close
 cancel=Cancel
 url=URL
 save=Save
+select=Select
 search=Search for a station...
-search.max.length=The field is too long
+field.max.length=The field is too long
+field.min.length=The field is too short
+field.invalid.length=The field is too short or too long
+field.invalid.value=This field contains invalid value
 countries=Countries
 library=Library
 downloadError=List of countries cannot be downloaded right now.
@@ -55,6 +60,9 @@ menu.help.loglevel.debug=Debug
 menu.help.clearDatabase=Remove all Favourites
 menu.help.vcs.check=Check for updates
 menu.history=History
+menu.history.show=Show History
+menu.history.recent=Recently listened
+menu.history.clear=Clear history...
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
@@ -90,3 +98,24 @@ stats.countries=Countries
 stats.brokenStations=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
+add.title=Add new station
+add.label=Add station into radio-browser.info public directory. Please fill all required information correctly and check if the station has not already been added.
+add.name=Name
+add.name.prompt=
+add.site=Website
+add.site.prompt=
+add.url=Stream URL
+add.url.prompt=
+add.icon=Icon
+add.icon.prompt=
+add.icon.select=Select Icon
+add.language=Language
+add.language.prompt=
+add.tags=Tags
+add.tags.prompt=
+add.country=Country
+add.country.prompt=
+add.selected=Selected
+add.invalid.file=Invalid file selected!
+add.success=Station has been added!
+add.title.prompt=
