refactoring, add some docs

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -62,6 +62,7 @@ menu.help.vcs.check=Check for updates
 menu.history=History
 menu.history.show=Show History
 menu.history.recent=Recently listened
+menu.history.empty=No recently listened stations...
 menu.history.clear=Clear history...
 menu.app.quit=Quit
 menu.app.about=About
