--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -74,6 +74,8 @@ menu.player.start=Play
 menu.player.switch=Use Custom Media Player (FFmpeg)
 menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
+menu.favourites=Favourites
+menu.favourites.show=Show Favourites
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
