--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,7 +1,7 @@
 appName=FXRadio
-favourites=Favourites
-history=History
-topStations=Top Stations
+Favourites=Favourites
+History=History
+TopStations=Top Stations
 copy=Copy
 copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
@@ -83,7 +83,7 @@ database.clear.confirm=Are you sure?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be reverted.
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
-searchResultsFor=Search results for
+Search=Search results for
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
