--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -121,3 +121,6 @@ add.selected=Selected
 add.invalid.file=Invalid file selected!
 add.success=Station has been added!
 add.title.prompt=
+info.country=Country
+info.language=Language
+info.votes=Votes
