Working on tests

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,4 +1,3 @@
-appName=FXRadio
 Favourites=Favourites
 History=History
 TopStations=Top Stations
@@ -124,3 +123,6 @@ add.title.prompt=
 info.country=Country
 info.language=Language
 info.votes=Votes
+attributions.title=Third Party software used by
+attributions.name=Name
+attributions.version=Version
