Refactor menus + add CustomErrorHandler.kt

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -58,6 +58,8 @@ menu.history.show=Show History
 menu.history.recent=Recently listened
 menu.history.empty=No recently listened stations...
 menu.history.clear=Clear history...
+history.clear.confirm=Do you want to clear the history?
+history.clear.text=This action cannot be undone
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
@@ -102,24 +104,20 @@ stats.title=API Statistics
 add.title=Add new station
 add.label=Add station into radio-browser.info public directory. Please fill all required information correctly and check if the station has not already been added.
 add.name=Name
-add.name.prompt=
 add.site=Website
-add.site.prompt=
 add.url=Stream URL
-add.url.prompt=
 add.icon=Icon
-add.icon.prompt=
 add.icon.select=Select Icon
 add.language=Language
-add.language.prompt=
+add.language.prompt=English
 add.tags=Tags
-add.tags.prompt=
+add.tags.prompt=Separated by comma and space
 add.country=Country
-add.country.prompt=
+add.country.prompt=United Kingdom
 add.selected=Selected
 add.invalid.file=Invalid file selected!
 add.success=Station has been added!
-add.title.prompt=
+add.error=There was an error when adding the station!
 info.country=Country
 info.language=Language
 info.votes=Votes
