add Flags, CountryCodes filtering

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -23,6 +23,7 @@ stations=stations
 player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
+player.streamingError=Streaming error
 player.vlc.error=VLC Player can't be initialized. Library is not installed on the system.
 player.streamError=Error opening stream. See app.log for details.
 search.on.youtube=Search on YouTube
@@ -52,7 +53,7 @@ menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
 menu.help.clearDatabase=Remove all Favourites
-menu.help.vcs.check=Check for updates
+menu.help.vcs.check=Check for updates...
 menu.history=History
 menu.history.show=Show History
 menu.history.recent=Recently listened
