replace player event with viewmodel

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -24,7 +24,7 @@ player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Pl
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
-player.vlc.error=VLC Player can't be initialized. Library is not installed on the system.
+player.vlc.error=VLC Player is not installed on the system. Select custom player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
 search.on.youtube=Search on YouTube
 vcs.download=Download new version
