--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -10,6 +10,8 @@ url=URL
 save=Save
 select=Select
 search=Search for a station...
+hide=Hide
+show=Show
 field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
