--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -26,7 +26,7 @@ player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Pl
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
-player.vlc.error=VLC Player is not installed on the system. Select custom player from Player menu.
+player.init.error=Error while initializing player. Try to select Custom player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
 search.on.youtube=Search on YouTube
 vcs.download=Download new version
@@ -47,6 +47,7 @@ menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
 menu.help.clearCache=Clear image cache
+menu.help.clearServer=Clear saved API server URL
 menu.help.stats=Show API statistics
 menu.help.openhomepage=Visit app website
 menu.help.logs=Open Logs Folder
@@ -79,6 +80,10 @@ cache.clear.confirm=Are you sure?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will clear all stored images of radio stations. This cannot be undone
+server.clear.confirm=Are you sure?
+server.clear.ok=API server cleared.
+server.clear.error=There was an error when clearing server.
+server.clear.text=This will remove currently saved API server. After you restart the app, the app will try to find working API server and save it.
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
