introduce new Property class

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -12,6 +12,7 @@ select=Select
 search=Search for a station...
 hide=Hide
 show=Show
+retry=Try again
 field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
@@ -19,7 +20,7 @@ field.invalid.value=This field contains invalid value
 countries=Countries
 library=Library
 downloadError=List of countries cannot be downloaded right now.
-downloadRetry=Download error. Retry?
+downloadRetry=Connection error. Try again?
 station=station
 stations=stations
 player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
