fix selected method, fix stats loading state

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -12,6 +12,7 @@ select=Select
 search=Search for a station...
 hide=Hide
 show=Show
+loading=Loading...
 retry=Try again
 field.max.length=The field is too long
 field.min.length=The field is too short
