Fix of adding new station

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -126,8 +126,9 @@ add.country=Country
 add.country.prompt=United Kingdom
 add.selected=Selected
 add.invalid.file=Invalid file selected!
-add.success=Station has been added!
-add.error=There was an error when adding the station!
+add.favourites=Also save to my favourites library
+add.success=Station has been added! It might take a significant time to show in the list.
+add.error=There was an error when adding the station.
 info.country=Country
 info.language=Language
 info.votes=Votes
