count the station clicks, rework api server selection

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -100,7 +100,7 @@ connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
 noResults=This library is empty
 noResultsFor=No stations found for
-searchingLibrary=Searching the library
+searchingLibrary=Searching Your Library
 searchingLibraryDesc=Enter at least 3 characters to start searching
 statsUnavailable=Stats are not available at the moment.
 stats.status=Status
