--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -4,6 +4,7 @@ TopStations=Top Stations
 copy=Copy
 copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
+copy.nowPlaying=Copy track name
 close=Close
 cancel=Cancel
 url=URL
@@ -30,6 +31,7 @@ player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
 player.init.error=Error while initializing player. Try to select Custom player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
+player.noMetaData=Unknown track
 search.on.youtube=Search on YouTube
 vcs.download=Download new version
 vcs.close.app=Close app
@@ -44,6 +46,7 @@ menu.station.favourite.error=There was an error when adding a favourite station.
 menu.station.favourite.remove=Remove from favourites
 menu.station.favourite.remove.error=There was an error removing favourite.
 menu.station.favourite.removed=Station was removed from favourites
+menu.station.favourite.clear=Clear favourites...
 menu.station.vote=Vote
 menu.station=_Station
 menu.station.info=Get info
@@ -57,7 +60,6 @@ menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
-menu.help.clearDatabase=Remove all Favourites
 menu.help.vcs.check=Check for updates...
 menu.history=History
 menu.history.show=Show History
