--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -137,3 +137,4 @@ info.votes=Votes
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
+servers.title=Available API servers
