add missing licenses

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -138,3 +138,4 @@ attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
 servers.title=Available API servers
+about.datasource=Data provided by http://radio-browser.info public API
