more validation into add new station form

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -19,6 +19,8 @@ field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
 field.invalid.value=This field contains invalid value
+field.invalid.country=This country is invalid
+field.invalid.url=This is not a valid URL address
 countries=Countries
 library=Library
 downloadError=List of countries cannot be downloaded right now.
