--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -98,7 +98,7 @@ database.clear.confirm=Are you sure?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be reverted.
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
-Search=Search results for
+Search=Showing results for
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
