--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -99,6 +99,8 @@ database.clear.text=This operation will remove all your saved favourite stations
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
 Search=Showing results for
+search.byname=By name
+search.bytag=By tag
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
