--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -54,7 +54,7 @@ menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
 menu.help.clearCache=Clear image cache
-menu.help.clearServer=Clear saved API server URL
+menu.help.clearServer=Clear selected server
 menu.help.stats=Show API statistics
 menu.help.openhomepage=Visit app website
 menu.help.logs=Open Logs Folder
@@ -142,4 +142,7 @@ attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
 servers.title=Available API servers
+servers.selected=selected
+server.save.ok=Server selected. Please restart the app to apply changes.
+server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
