--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -54,7 +54,6 @@ menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
 menu.help.clearCache=Clear image cache
-menu.help.clearServer=Clear selected server
 menu.help.stats=Show API statistics
 menu.help.openhomepage=Visit app website
 menu.help.logs=Open Logs Folder
@@ -63,7 +62,7 @@ menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
 menu.help.vcs.check=Check for updates...
-menu.history=History
+menu.history=_History
 menu.history.show=Show History
 menu.history.recent=Recently listened
 menu.history.empty=No recently listened stations...
@@ -74,22 +73,18 @@ menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Change API server
-menu.player.controls=Player
+menu.player.controls=_Player
 menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Custom Media Player (FFmpeg)
 menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
-menu.favourites=Favourites
+menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
 cache.clear.confirm=Are you sure?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will clear all stored images of radio stations. This cannot be undone
-server.clear.confirm=Are you sure?
-server.clear.ok=API server cleared.
-server.clear.error=There was an error when clearing server.
-server.clear.text=This will remove currently saved API server. After you restart the app, the app will try to find working API server and save it.
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
@@ -99,8 +94,8 @@ database.clear.text=This operation will remove all your saved favourite stations
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
 Search=Showing results for
-search.byname=By name
-search.bytag=By tag
+search.byName=By Name
+search.byTag=By Tag
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
@@ -108,7 +103,7 @@ noResults=This library is empty
 noResultsFor=No stations found for
 searchingLibrary=Searching Your Library
 searchingLibraryDesc=Enter at least 3 characters to start searching
-statsUnavailable=Stats are not available at the moment.
+stats.statsUnavailable=Stats are not available at the moment.
 stats.status=Status
 stats.apiVersion=API Version
 stats.supportedVersion=Supported version
@@ -123,7 +118,6 @@ add.name=Name
 add.site=Website
 add.url=Stream URL
 add.icon=Icon
-add.icon.select=Select Icon
 add.language=Language
 add.language.prompt=English
 add.tags=Tags
