--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -137,6 +137,8 @@ attributions.name=Name
 attributions.version=Version
 servers.title=Available API servers
 servers.selected=selected
+servers.notAvailable=No available servers right now. Try again later.
+servers.reload=Reload list
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
