--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -99,7 +99,7 @@ search.byTag=By Tag
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResultsDesc=Try refining the search query
-noResults=This library is empty
+noResults=No stations were found
 noResultsFor=No stations found for
 searchingLibrary=Searching Your Library
 searchingLibraryDesc=Enter at least 3 characters to start searching
