refactoring, fixed tests, moved Vote button into StationInfoFragment.kt

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -49,7 +49,7 @@ menu.station.favourite.remove=Remove from favourites
 menu.station.favourite.remove.error=There was an error removing favourite.
 menu.station.favourite.removed=Station was removed from favourites
 menu.station.favourite.clear=Clear favourites...
-menu.station.vote=Vote
+menu.station.vote=Add Vote
 menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
@@ -84,7 +84,8 @@ menu.favourites.show=Show Favourites
 cache.clear.confirm=Are you sure?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
-cache.clear.text=This action will clear all stored images of radio stations. This cannot be undone
+cache.clear.text=This action will clear {0} MB of stored images of radio stations. This cannot be undone
+cache.clear.empty=There is nothing to clear, cache is already empty!
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
