refactoring to rx, various fixes, fix for server selection

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -42,12 +42,12 @@ vcs.required=There is a new required update.
 vcs.uptodate=You are running the latest version of app.
 menu.station.add=Add new station
 menu.station.favourite=Add to favourites
-menu.station.favourite.added=Station added to favourites!
+menu.station.favourite.added={0} was added to favourites
 menu.station.favourite.addedAlready=Station is already in your favourites!
 menu.station.favourite.error=There was an error when adding a favourite station. Try again.
 menu.station.favourite.remove=Remove from favourites
 menu.station.favourite.remove.error=There was an error removing favourite.
-menu.station.favourite.removed=Station was removed from favourites
+menu.station.favourite.removed={0} was removed from favourites
 menu.station.favourite.clear=Clear favourites...
 menu.station.vote=Add Vote
 menu.station=_Station
@@ -140,6 +140,7 @@ servers.title=Available API servers
 servers.selected=selected
 servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload list
+servers.restartNeeded=Selected server will be applied after restart of the app!
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
