refactoring, various UI changes

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,3 +1,4 @@
+#GLOBAL strings
 Favourites=Favourites
 History=History
 TopStations=Top Stations
@@ -7,47 +8,41 @@ copy.stream.url=Copy Stream URL
 copy.nowPlaying=Copy track name
 close=Close
 cancel=Cancel
-url=URL
 save=Save
-select=Select
-search=Search for a station...
-hide=Hide
-show=Show
+search=Search radio directory...
 loading=Loading...
 retry=Try again
+countries=Countries
+library=Library
+station=station
+stations=stations
+connectionError=Connection error. Please try again
+connectionErrorDesc=Please check if your internet connection is working.
+noResults=No stations were found
+searchingLibrary=Searching Radio Directory
+searchingLibraryDesc=Type at least 3 characters to the search field
 field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
 field.invalid.value=This field contains invalid value
 field.invalid.country=This country is invalid
 field.invalid.url=This is not a valid URL address
-countries=Countries
-library=Library
 downloadError=List of countries cannot be downloaded right now.
 downloadRetry=Connection error. Try again?
-station=station
-stations=stations
 player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
-player.init.error=Error while initializing player. Try to select Custom player from Player menu.
+player.initError=Error while initializing player. Try to select Custom player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
 player.noMetaData=Unknown track
-search.on.youtube=Search on YouTube
-vcs.download=Download new version
-vcs.close.app=Close app
-vcs.close=Close
-vcs.required=There is a new required update.
-vcs.uptodate=You are running the latest version of app.
 menu.station.add=Add new station
 menu.station.favourite=Add to favourites
-menu.station.favourite.added={0} was added to favourites
-menu.station.favourite.addedAlready=Station is already in your favourites!
-menu.station.favourite.error=There was an error when adding a favourite station. Try again.
-menu.station.favourite.remove=Remove from favourites
-menu.station.favourite.remove.error=There was an error removing favourite.
-menu.station.favourite.removed={0} was removed from favourites
+menu.station.favouriteAdded={0} was added to favourites
+menu.station.favouriteAdded.error=There was an error when adding a favourite station. Try again.
+menu.station.favouriteRemove=Remove from favourites
+menu.station.favouriteRemove.error=There was an error removing favourite.
+menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear favourites...
 menu.station.vote=Add Vote
 menu.station=_Station
@@ -61,14 +56,12 @@ menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
-menu.help.vcs.check=Check for updates...
 menu.history=_History
 menu.history.show=Show History
 menu.history.recent=Recently listened
-menu.history.empty=No recently listened stations...
 menu.history.clear=Clear history...
 history.clear.confirm=Do you want to clear the history?
-history.clear.text=This action cannot be undone
+history.clear.text=This operation will remove all your history and cannot be undone.
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
@@ -91,19 +84,12 @@ vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
 favourites.clean=Clean favourites
 database.clear.confirm=Are you sure?
-database.clear.text=This operation will remove all your saved favourite stations and cannot be reverted.
+database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
 Search=Showing results for
 search.byName=By Name
 search.byTag=By Tag
-connectionError=Connection error. Please try again
-connectionErrorDesc=Please check if your internet connection is working.
-noResultsDesc=Try refining the search query
-noResults=No stations were found
-noResultsFor=No stations found for
-searchingLibrary=Searching Your Library
-searchingLibraryDesc=Enter at least 3 characters to start searching
 stats.statsUnavailable=Stats are not available at the moment.
 stats.status=Status
 stats.apiVersion=API Version
@@ -125,11 +111,11 @@ add.tags=Tags
 add.tags.prompt=Separated by comma and space
 add.country=Country
 add.country.prompt=United Kingdom
-add.selected=Selected
 add.invalid.file=Invalid file selected!
 add.favourites=Also save to my favourites library
 add.success=Station has been added! It might take a significant time to show in the list.
 add.error=There was an error when adding the station.
+add.cleanupForm=Clear form
 info.country=Country
 info.language=Language
 info.votes=Votes
