Add Pinned Countries feature + refactoring + fix tests

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -130,3 +130,9 @@ servers.restartNeeded=Selected server will be applied after restart of the app!
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
+pin=Pin
+unpin=Unpin
+pinned=Pinned countries
+pinned.message={0} has been pinned!
+unpinned.message={0} has been unpinned!
+pinning.error=There was an error with pin/unpin operation!
