--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -74,10 +74,10 @@ menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
-cache.clear.confirm=Are you sure?
+cache.clear.confirm=Do you want to clear image cache?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
-cache.clear.text=This action will clear {0} MB of stored images of radio stations. This cannot be undone
+cache.clear.text=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
 cache.clear.empty=There is nothing to clear, cache is already empty!
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
