Refactoring of Players

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -16,6 +16,7 @@ countries=Countries
 library=Library
 station=station
 stations=stations
+unknown=Unknown
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResults=No stations were found
@@ -29,11 +30,11 @@ field.invalid.country=This country is invalid
 field.invalid.url=This is not a valid URL address
 downloadError=List of countries cannot be downloaded right now.
 downloadRetry=Connection error. Try again?
-player.ffmpeg.info=Custom Media Player is used. Some stations might not play. Please switch to VLC player
+player.ffmpeg.info=Humble Media Player is used. Some stations might not play. Please switch to VLC player
 player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
-player.initError=Error while initializing player. Try to select Custom player from Player menu.
+player.initError=Error while initializing player. Try to select Humble Media Player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
 player.noMetaData=Unknown track
 menu.station.add=Add new station
@@ -69,7 +70,7 @@ menu.app.server=Change API server
 menu.player.controls=_Player
 menu.player.stop=Stop
 menu.player.start=Play
-menu.player.switch=Use Custom Media Player (FFmpeg)
+menu.player.switch=Use Humble Media Player (FFmpeg)
 menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
 menu.favourites=_Favourites
@@ -119,6 +120,8 @@ add.cleanupForm=Clear form
 info.country=Country
 info.language=Language
 info.votes=Votes
+info.codec=Codec
+info.bitrate=Bitrate (kbps)
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
