Use listview for history

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -135,7 +135,7 @@ server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
 pin=Pin
 unpin=Unpin
-pinned=Pinned countries
-pinned.message={0} has been pinned!
-unpinned.message={0} has been unpinned!
+pinned=Pinned
+pinned.message=Country {0} has been pinned
+unpinned.message=Country {0} has been unpinned
 pinning.error=There was an error with pin/unpin operation!
