strings update, events cleanup

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -11,12 +11,10 @@ cancel=Cancel
 save=Save
 search=Search radio directory...
 loading=Loading...
-retry=Try again
 countries=Countries
 library=Library
 station=station
 stations=stations
-unknown=Unknown
 connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResults=No stations were found
@@ -45,7 +43,7 @@ menu.station.favouriteRemove=Remove from favourites
 menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear favourites...
-menu.station.vote=Add Vote
+menu.station.vote=Vote for the station
 menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
@@ -62,7 +60,7 @@ menu.history.show=Show History
 menu.history.recent=Recently listened
 menu.history.clear=Clear history...
 history.clear.confirm=Do you want to clear the history?
-history.clear.text=This operation will remove all your history and cannot be undone.
+history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
@@ -84,7 +82,7 @@ vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
 macos.menu.window=Window
 favourites.clean=Clean favourites
-database.clear.confirm=Are you sure?
+database.clear.confirm=Do you want to clear favourites?
 database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
 database.clear.ok=Favourites have been cleaned!
 database.clear.error=There was an error cleaning database!
