WIP: reworking viewModels, adding usecases

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,7 +1,7 @@
 #GLOBAL strings
-Favourites=Favourites
-History=History
-TopStations=Top Stations
+favourites=Favourites
+history=History
+topStations=Top Stations
 copy=Copy
 copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
@@ -35,6 +35,7 @@ player.streamingError=Streaming error
 player.initError=Error while initializing player. Try to select Humble Media Player from Player menu.
 player.streamError=Error opening stream. See app.log for details.
 player.noMetaData=Unknown track
+player.playRandomStation=Play random station from history
 menu.station.add=Add new station
 menu.station.favourite=Add to favourites
 menu.station.favouriteAdded={0} was added to favourites
@@ -91,11 +92,11 @@ search.byName=By Name
 search.byTag=By Tag
 stats.statsUnavailable=Stats are not available at the moment.
 stats.status=Status
-stats.apiVersion=API Version
-stats.supportedVersion=Supported version
+stats.software_version=API Version
+stats.supported_version=Supported version
 stats.stations=Stations
 stats.countries=Countries
-stats.brokenStations=Broken stations
+stats.stations_broken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
 add.title=Add new station
@@ -125,6 +126,7 @@ attributions.name=Name
 attributions.version=Version
 servers.title=Available API servers
 servers.selected=selected
+servers.error=Error when trying to get servers. Try again later.
 servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload list
 servers.restartNeeded=Selected server will be applied after restart of the app!
