Small bugfixes + refactoring

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -126,7 +126,7 @@ attributions.name=Name
 attributions.version=Version
 servers.title=Available API servers
 servers.selected=selected
-servers.error=Error when trying to get servers. Try again later.
+servers.error=Error when getting servers:\n
 servers.notAvailable=No available servers right now. Try again later.
 servers.reload=Reload list
 servers.restartNeeded=Selected server will be applied after restart of the app!
