Small bugfixes + UI improvements

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -44,7 +44,7 @@ menu.station.favouriteRemove=Remove from favourites
 menu.station.favouriteRemove.error=There was an error removing favourite.
 menu.station.favouriteRemoved={0} was removed from favourites
 menu.station.favourite.clear=Clear favourites...
-menu.station.vote=Vote for the station
+menu.station.vote=Add vote
 menu.station=_Station
 menu.station.info=Get info
 menu.help=_Help
@@ -115,7 +115,7 @@ add.invalid.file=Invalid file selected!
 add.favourites=Also save to my favourites library
 add.success=Station has been added! It might take a significant time to show in the list.
 add.error=There was an error when adding the station.
-add.cleanupForm=Clear form
+add.cleanupForm=Clear
 info.country=Country
 info.language=Language
 info.votes=Votes
@@ -128,8 +128,8 @@ servers.title=Available API servers
 servers.selected=selected
 servers.error=Error when getting servers:\n
 servers.notAvailable=No available servers right now. Try again later.
-servers.reload=Reload list
-servers.restartNeeded=Selected server will be applied after restart of the app!
+servers.reload=Reload
+servers.restartNeeded=Selected server will be applied after restart of the app.
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
 about.datasource=Data provided by http://radio-browser.info public API
