Small bugfixes + UI improvements

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -19,7 +19,7 @@ connectionError=Connection error. Please try again
 connectionErrorDesc=Please check if your internet connection is working.
 noResults=No stations were found
 searchingLibrary=Searching Radio Directory
-searchingLibraryDesc=Type at least 3 characters to the search field
+searchingLibraryDesc=Start by typing at least 3 characters to the search field...
 field.max.length=The field is too long
 field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
@@ -74,6 +74,7 @@ menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
+menu.favourites.all=All favourites
 cache.clear.confirm=Do you want to clear image cache?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
@@ -132,7 +133,7 @@ servers.reload=Reload
 servers.restartNeeded=Selected server will be applied after restart of the app.
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
-about.datasource=Data provided by http://radio-browser.info public API
+about.datasource=Data provider
 pin=Pin
 unpin=Unpin
 pinned=Pinned
