accent colors for macos

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -3,6 +3,7 @@ favourites=Favourites
 history=History
 topStations=Top Stations
 copy=Copy
+show=Show
 copy.image.url=Copy Image URL
 copy.stream.url=Copy Stream URL
 copy.nowPlaying=Copy track name
@@ -133,7 +134,7 @@ servers.reload=Reload
 servers.restartNeeded=Selected server will be applied after restart of the app.
 server.save.ok=Server selected. Please restart the app to apply changes.
 server.save.error=Can't save selected server.
-about.datasource=Data provider
+about.datasource=Data provided by radio-browser.info
 pin=Pin
 unpin=Unpin
 pinned=Pinned
