--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -10,7 +10,7 @@ copy.nowPlaying=Copy track name
 close=Close
 cancel=Cancel
 save=Save
-search=Search radio directory...
+search=Search radio directory
 loading=Loading...
 countries=Countries
 library=Library
