--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -34,7 +34,7 @@ player.nowStreaming=Now streaming
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
 player.initError=Error while initializing player. Try to select Humble Media Player from Player menu.
-player.streamError=Error opening stream. See app.log for details.
+player.streamError=Error opening {0}. See app.log for details.
 player.noMetaData=Unknown track
 player.playRandomStation=Play random station from history
 menu.station.add=Add new station
